--- a/app/src/main/res/layout/activity_success_payment.xml
+++ b/app/src/main/res/layout/activity_success_payment.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_marginTop="80dp"
         android:layout_width="match_parent"
-        android:text="Ticket Payment Successful!"
+        android:text="Payment Successful!"
         android:textAlignment="center"
         android:textSize="32sp"
         android:layout_height="wrap_content" />
